[project]
name = "examtopics_scraper"
description = "Scraper for question discussions on ExamTopics"
version = "1.3.0"
authors = [{ name="aserpi" }, { name="thevix" }]

requires-python = ">=3.10"
dependencies = [
    "scrapy >= 2.7", # Removed the upper bound <3
    "requests",
    "lxml",
    "typer[all]",
]

readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]


[project.urls]
"Homepage" = "https://github.com/aserpi/examtopics_scraper"
"Bug Tracker" = "https://github.com/aserpi/examtopics_scraper/issues"


[tool.setuptools]
# Explicitly list the package directory
packages = ["examtopics_scraper"]

# Alternatively, use find directive for more control
# [tool.setuptools.packages.find]
# include = ["examtopics_scraper*"]
# exclude = ["data*", "improvement_plans*"] # Exclude other top-level directories

[project.scripts]
examtopics-scraper = "examtopics_scraper.__main__:app"
